# obj_detect_pytorch

./: .stestr.conf  Jenkinsfile  LICENSE  README.md  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: 1.0-obj_detect_pytorch_start.py2.ipynb  1.0-obj_detect_pytorch_start.py3.ipynb  Own_dataset.ipynb  PennFudanData.ipynb
obj_detect_pytorch/: config.py
obj_detect_pytorch/dataset/: coco_eval.py  coco_utils.py  make_dataset.py
obj_detect_pytorch/features/: build_features.py
obj_detect_pytorch/models/: create_resfiles.py  deepaas_api.py  engine.py  model_metrics.py  model_utils.py
obj_detect_pytorch/tests/: test_func_model.py  test_unit_model.py
obj_detect_pytorch/visualization/: visualize.py
