[metadata]
name = obj_detect_pytorch
summary = Object detection with pytorch
description-file =
    README.md
author = Silke Donayre
author-email = silke.holtz@student.kit.edu
version = 0.0.0
license = MIT
home-page = https://github.com/silkedh/obj_detect_pytorch
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python

    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5


[files]
packages =
    obj_detect_pytorch

[entry_points]

deepaas.model = 
    obj_detect_pytorch = obj_detect_pytorch.models.deepaas_api

