[metadata]
name = obj_detect_pytorch
summary = This is a plug-and-play tool for object detection and classification using deep neural networks (Faster R-CNN ResNet-50 FPN Architecture) that were already pretrained on the COCO Dataset.
description-file =
    README.md
author = Silke Donayre
author-email = silke.holtz@student.kit.edu
version = 0.0.1
license = MIT
home-page = https://github.com/silkedh/obj_detect_pytorch
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python

    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5


[files]
packages =
    obj_detect_pytorch

[entry_points]

deepaas.v2.model = 
    obj_detect_pytorch = obj_detect_pytorch.models.deepaas_api

